--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,7 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'uhs-robert/tmux-oasis'
 set -g @oasis_flavor "desert_dark"  # Optional: defaults to lagoon_dark
+set -g @plugin 'jaclu/tmux-menus'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
